--- a/app/views/introduction/home.html.erb
+++ b/app/views/introduction/home.html.erb
@@ -59,7 +59,7 @@
                                 <h5>Computer Engineering</h5>
                             </div>
                             <div class="col-md-3">
-                                <h5>Daeil Foreing Language High School</h5>
+                                <h5>Daeil Foreign Language High School</h5>
                             </div>
                     </div>
                 </div>
